feat: rebac check redirect
